# OOP

./: Lab10.rar
Lab1/: ala.c
Lab10/: Lab10.pro  Lab10.sln  filter.h  gui.cpp  gui.h  main.cpp  my_exception.cpp  my_exception.h  repository.cpp  repository.h  service.cpp  service.h  tenant.cpp  undoclass.cpp  undoclass.h  validator.cpp  validator.h
Lab10/Lab10/: Lab10.vcxproj  blocGUI.cpp  repo.h  (+11 more)
Lab101231/: Lab10.pro  lab10.cpp  lab10.h  main.cpp  repo.cpp  report.cpp  undo.h  validator.h
Lab10_11/: CMakeLists.txt  main.cpp  mainwindow.ui
Lab2/: CMakeLists.txt  intersectie.c  numpar.c
Lab3-4/: CMakeLists.txt  main.c
Lab3-4/Domain/: participant.c  participant.h
Lab3-4/Interface/: interface.c  interface.h
Lab3-4/Repozitory/: repozitory.c  repozitory.h
Lab3-4/Service/: service.c  service.h
Lab3-4/Validators/: validators.c  validators.h
Lab6-7/: CMakeLists.txt  dynamic_array.h  main.cpp
Lab8-9/: CMakeLists.txt  dynamic_array.h  input  main.cpp  test.html  test2.html
Lab8-9/AbstractRepo/: AbstractRepo.cpp  AbstractRepo.h
Lab8-9/Cart/: cart.cpp  cart.h
Lab8-9/Domain/: tenant.cpp  tenant.h
Lab8-9/Exception/: my_exception.cpp
Lab8-9/Interface/: interface.cpp  interface.h
Lab8-9/NewRepository/: newrepository.cpp  newrepository.h
Lab8-9/Repository/: repository.cpp  repository.h
Lab8-9/Service/: service.cpp  service.h
Lab8-9/Undo/: UndoClass.cpp  UndoClass.h
Lab8-9/test/: test.cpp  test.h
build-Lab10-Desktop_Qt_6_2_4_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Lab10.Debug  object_script.Lab10.Release
(+198 files in other folders)
